<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.messo.pos</groupId>
  <version>1.0</version>
  
  <dependencies>
  	<dependency>
		<groupId>com.h2database</groupId>
		<artifactId>h2</artifactId>
		<version>1.4.197</version>
		<scope>runtime</scope>
	</dependency>
	<dependency>
    	<groupId>org.apache.poi</groupId>
    	<artifactId>poi</artifactId>
    	<version>4.1.1</version>
	</dependency>
  </dependencies>
  <properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
      <resource>
        <directory>${basedir}\resources</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
	    </plugin>
		<plugin>
			<groupId>com.zenjava</groupId>
			<artifactId>javafx-maven-plugin</artifactId>
			<version>8.8.3</version>
			<configuration>
				<mainClass>com.messo.pos.MainApp</mainClass>
			</configuration>
			<executions>
				<execution>
					<id>create-jfxjar</id>
					<phase>package</phase>
					<goals>
						<goal>build-jar</goal>
					</goals>
				</execution>
			</executions>
		</plugin>
		<plugin>
			<artifactId>maven-assembly-plugin</artifactId>
			<configuration>
			<archive>
				<manifest>
					<mainClass>com.messo.pos.MainApp</mainClass>
				</manifest>
				<!-- splash screen può essere inserito anche sotto maven-jar-plugin -->
          		<manifestEntries>
            		<SplashScreen-Image>images/nggs-pos.jpg</SplashScreen-Image>
          		</manifestEntries>
			</archive>
			<descriptorRefs>
				<descriptorRef>jar-with-dependencies</descriptorRef>
			</descriptorRefs>
			</configuration>
			<executions>
			<execution>
				<id>make-assembly</id> <!-- this is used for inheritance merges -->
				<phase>package</phase> <!-- bind to the packaging phase -->
				<goals>
					<goal>single</goal>
				</goals>
			</execution>
			</executions>
		</plugin>
    </plugins>
  </build>
  <artifactId>NGGS-Pos</artifactId>
</project>